# qRezix

./: .cvsignore  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  INSTALL  Makefile  Makefile.am  Makefile.in  README  TODO  acinclude.m4  aclocal.m4  build-mac  config.h  config.h.in  config.status  configure  configure.in  configure.in.in  defaults.h  dnsValidator.cpp  dnsvalidator.h  grepped.txt  icone.rc  klocale.h.qtonly  libtool  main.cpp  map.ini  memleakscheck-mac  q.xpm  qrezix.cpp  qrezix.dsp  qrezix.h  qrezix.kdevelop  qrezix.kdevses  qrezix.pro  qrezixui.ui  qrezixui_mac.ui  resource.h  (+66 more)
admin/: acinclude.m4.in  am_edit  configure.in.min  cvs.sh
autom4te.cache/: output.0  traces.0
chat/: chat.pri  chat.pro  rzxchat.cpp  rzxchat.h  rzxchatconfig.cpp  rzxchatconfig.h  rzxchatlister.cpp  rzxchatlister.h  rzxchatpropui.ui  rzxchatsocket.cpp  rzxchatsocket.h  rzxchatui.ui  rzxclientlistener.cpp  rzxclientlistener.h
core/: RzxAbstractConfig  RzxApplication  RzxBanList  RzxBaseLoader  RzxBaseModule  RzxChangePass  RzxComputerList  RzxComputerListWidget  RzxConfig  RzxConnectionLister  RzxFavoriteList  RzxGlobal  RzxHostAddress  RzxIconCollection  RzxInfoMessage  RzxIntro  RzxListEdit  RzxLoaderProp  RzxMessageBox  RzxModule  RzxNetwork  RzxPlugIn  RzxPlugInLoader  RzxProperty  RzxQuickRun  RzxSound  RzxStyle  RzxSubnet  RzxTranslator  RzxUtilsLauncher  RzxWrongPass  core.pri  core.pro  defaults.h  rzxabstractconfig.cpp  rzxabstractconfig.h  rzxapplication.cpp  rzxapplication.h  rzxbanlist.cpp  rzxbanlist.h  (+79 more)
debian/: changelog  control  files  qrezix-theme-classic.install  qrezix-theme-krystal.install  qrezix-theme-ms.install  qrezix-theme-noia-warm.install  qrezix-translations-fr.install  qrezix-translations.install  qrezix.postinst.debhelper  qrezix.postrm.debhelper  qrezix.substvars  rules
doc/: ChangeLog.2.0.0_beta1.to.2.0.0_beta2  Makefile  Makefile.in  ProtocolDCC.txt
gentoo/: ChangeLog  Manifest  qrezix-1.6.1.9999.ebuild  qrezix-1.6.1.ebuild  qrezix-1.6.2.ebuild  qrezix-1.6.4.9999.ebuild  qrezix-1.6.4.ebuild  qrezix-smilix-9999.ebuild  qrezix-xplo-9999.ebuild
icons/: Makefile  Makefile.in
icons/themes/NoiaWarmKDE/: Makefile  Makefile.am  Makefile.in
install_win/: qrezix.nsi
jabber/: README  jabber.pri  rzxjabberclient.cpp  rzxjabberclient.h  rzxjabbercomputer.cpp  rzxjabbercomputer.h  rzxjabberconfig.h  rzxjabberproperty.cpp  rzxjabberproperty.h  rzxjabberprotocole.cpp  rzxjabberprotocole.h
macosx/: qRezix.pmsp
main/: main.cpp  main.pro
mainui/: mainui.pri  mainui.pro  qrezix.cpp  qrezix.h  qrezixui.ui  rzxdict.h  rzxitemui.ui  rzxmainuiconfig.h  rzxquit.cpp  rzxquit.h  rzxrezal.h  rzxrezaldetail.cpp  rzxrezaldetail.h  rzxrezalindex.cpp  rzxrezalindex.h  rzxrezalmap.cpp  rzxrezalmap.h  rzxrezalmodel.cpp  rzxrezalmodel.h  rzxrezalpopup.cpp  rzxrezalsearch.cpp  rzxrezalsearch.h  rzxrezalview.cpp  rzxrezalview.h  rzxstatusui.ui  rzxui.cpp  rzxui.h
modules/: modules.pro
net/: net.pro
notifier/: notifier.pri  notifier.pro  rzxnotifier.cpp  rzxnotifier.h  rzxnotifier.qrc  rzxnotifierpropui.ui  rzxtraywindow.cpp  rzxtraywindow.h
po/: Makefile  Makefile.in
qrezix/: .cvsignore  ChangeLog  Info.plist  Makefile  Makefile.am  Makefile.in  Makefile.w32  TODO  adict.h  application.icns  build-mac  defaults.h  dnsValidator.cpp  dnsvalidator.h  main.cpp  map.ini  md5.cpp  q.xpm  qrezix.cpp  qrezix.h  qrezix.kdevelop  qrezix.kdevprj  qrezix.kdevses  qrezix.lsm  qrezix.pro  qrezixquit.cpp  qrezixquit.h  qrezixquitui.ui  qrezixui.ui  qrezixui_mac.ui  rzxapplication.cpp  rzxapplication.h  rzxchangepassui.ui  rzxchat.cpp  rzxchat.h  rzxchatlister.cpp  rzxchatlister.h  rzxchatsocket.cpp  rzxchatui.ui  rzxchatui_mac.ui  (+54 more)
qrezix/chat/: chat.pri  chat.pro  rzxchat.cpp  rzxchat.h  rzxchatconfig.h  rzxchatlister.cpp  rzxchatlister.h  rzxchatpropui.ui  rzxchatsocket.cpp  rzxchatsocket.h  rzxclientlistener.h
qrezix/core/: RzxComputer  RzxProtocole  RzxServerListener  RzxThemedIcon  core.pri  core.pro  defaults.h  rzxabstractconfig.cpp  rzxabstractconfig.h  rzxapplication.cpp  rzxapplication.h  rzxbaseloader.h  rzxbasemodule.cpp  rzxbasemodule.h  rzxchangepass.cpp  rzxchangepass.h  rzxcomputer.cpp  rzxcomputer.h  rzxconfig.cpp  rzxconfig.h  rzxconnectionlister.cpp  rzxconnectionlister.h  rzxglobal.cpp  rzxglobal.h  rzxhostaddress.cpp  rzxhostaddress.h  rzxiconcollection.cpp  rzxiconcollection.h  rzxmessagebox.cpp  rzxmessagebox.h  rzxmodule.cpp  rzxmodule.h  rzxnetwork.cpp  rzxnetwork.h  rzxplugin.h  rzxproperty.cpp  rzxproperty.h  rzxpropertyui.ui  rzxprotocole.cpp  rzxserverlistener.cpp  (+9 more)
qrezix/doc/: ProtocolDCC.txt  structure.txt
qrezix/install/debian/: Makefile.am  README.debian  changelog  menu
qrezix/install/gentoo/: qrezix-9999.ebuild
qrezix/jabber/: README  jabber.pro  rzxjabberclient.cpp  rzxjabberclient.h  rzxjabbercomputer.cpp  rzxjabbercomputer.h  rzxjabberproperty.cpp  rzxjabberproperty.h  rzxjabberpropui.ui  rzxjabberprotocole.cpp  rzxjabberprotocole.h
qrezix/main/: main.cpp  main.pro
qrezix/mainui/: mainui.pri  mainui.pro  qrezix.cpp  qrezix.h  rzxdict.h  rzxmainuiconfig.h  rzxmainuipropui.ui  rzxquit.cpp  rzxrezal.cpp  rzxrezal.h  rzxrezaldetail.cpp  rzxrezaldetail.h  rzxrezalindex.cpp  rzxrezalindex.h  rzxrezalmap.cpp  rzxrezalmap.h  rzxrezalmodel.cpp  rzxrezalmodel.h  rzxrezalpopup.cpp  rzxrezalsearch.cpp  rzxrezalview.cpp  rzxui.cpp  rzxui.h
qrezix/notifier/: notifier.pri  rzxnotifier.cpp  rzxnotifier.h  rzxnotifier.qrc  rzxnotifierpropui.ui  rzxtraywindow.cpp
qrezix/resources/: Info.plist  q_mac.xpm  qrezix.icns
qrezix/resources/themes/Classic/: Makefile.am
qrezix/resources/themes/Kids/: Makefile.in
qrezix/resources/themes/NoiaWarmKDE/: Makefile.am  Makefile.in
qrezix/resources/themes/ms/: Makefile.am  Makefile.in
qrezix/translations/: Makefile.am  Makefile.in  chat_fr.ts  notifier_fr.ts  qrezix.qm  qrezix.ts  qrezix_fr.qm  qrezix_fr.ts  tray_fr.ts  xnet_fr.ts
qrezix/tray/: rzxtrayicon.cpp  tray.pri  tray.pro
qrezix/xnet/: rzxprotocole.cpp  rzxprotocole.h  rzxserverlistener.cpp
resources/: Info.plist  icone.rc  (+4 more)
(+219 files in other folders)
