dnl    This file is part of the KDE libraries/packages
dnl    Copyright (C) 2001 Stephan Kulow (coolo@kde.org)
 
dnl    This file is free software; you can redistribute it and/or
dnl    modify it under the terms of the GNU Library General Public
dnl    License as published by the Free Software Foundation; either
dnl    version 2 of the License, or (at your option) any later version.
 
dnl    This library is distributed in the hope that it will be useful,
dnl    but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
dnl    Library General Public License for more details.
 
dnl    You should have received a copy of the GNU Library General Public License
dnl    along with this library; see the file COPYING.LIB.  If not, write to
dnl    the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
dnl    Boston, MA 02111-1307, USA.

# Original Author was Kalle@kde.org
# I lifted it in some mater. (Stephan Kulow)
# I used much code from Janos Farkas

dnl Process this file with autoconf to produce a configure script.

AC_INIT(acinclude.m4) dnl a source file from your sub dir

dnl This is so we can use kde-common
AC_CONFIG_AUX_DIR(admin)

dnl This ksh/zsh feature conflicts with `cd blah ; pwd`
unset CDPATH

dnl Checking host/target/build systems, for make, install etc.
AC_CANONICAL_SYSTEM 
dnl Perform program name transformation
AC_ARG_PROGRAM

dnl Automake doc recommends to do this only here. (Janos)
AM_INIT_AUTOMAKE(qrezix, "1.6.3") dnl searches for some needed programs

KDE_SET_PREFIX

dnl generate the config header
AM_CONFIG_HEADER(config.h) dnl at the distribution this done

dnl Checks for programs.
AC_CHECK_COMPILERS
AC_ENABLE_SHARED(yes)
AC_ENABLE_STATIC(no)
dnl KDE_PROG_LIBTOOL

dnl for NLS support. Call them in this order!
dnl WITH_NLS is for the po files
dnl AM_KDE_WITH_NLS

dnl KDE_USE_QT
dnl AC_PATH_KDE
#MIN_CONFIG

KDE_PROG_LIBTOOL
AC_PATH_QT(3, 3, 0)

case $host in
        bsd)
                AC_DEFINE_UNQUOTED([Q_OS_BSD],1,[disable signal handler if host is bsd])
        ;;
esac
				
if test "x$enable_kde" = "xno" || test "x$enable_kde" = "x"; then
	cp -f klocale.h.qtonly qrezix/klocale.h
	qrezix_dir="/usr/share/qrezix"
        plugin_dir="/usr/lib/qrezix"
fi

if test "x$enable_kde" = "xyes"; then
	AM_KDE_WITH_NLS
	AC_PATH_KDE
	
	rm -f qrezix/klocale.h
	qrezix_dir="/usr/share/apps/qrezix"
        plugin_dir="/usr/lib/qrezix"
fi

AC_DEFINE_UNQUOTED(QREZIX_DATA_DIR, "$qrezix_dir", [ Chemin vers le repertoire d'installation des icones qrezix])
AC_DEFINE_UNQUOTED(QREZIX_LIB_DIR, "$plugin_dir", [ Chemin vers le répertoire d'installation des plug-ins de qrezix])

KDE_CREATE_SUBDIRSLIST
AC_CONFIG_FILES([ Makefile ])
AC_CONFIG_FILES([ doc/Makefile ])
AC_CONFIG_FILES([ doc/en/Makefile ])
AC_CONFIG_FILES([ icons/Makefile ])
AC_CONFIG_FILES([ icons/themes/Makefile ])
AC_CONFIG_FILES([ icons/themes/Kids/Makefile ])
AC_CONFIG_FILES([ icons/themes/MacOSX/Makefile ])
AC_CONFIG_FILES([ icons/themes/NoiaWarmKDE/Makefile ])
AC_CONFIG_FILES([ icons/themes/classic/Makefile ])
AC_CONFIG_FILES([ icons/themes/krystal/Makefile ])
AC_CONFIG_FILES([ icons/themes/ms/Makefile ])
AC_CONFIG_FILES([ macosx/root/Applications/qRezix.app/Contents/Resources/themes/Makefile ])
AC_CONFIG_FILES([ macosx/root/Applications/qRezix.app/Contents/Resources/themes/Kids/Makefile ])
AC_CONFIG_FILES([ macosx/root/Applications/qRezix.app/Contents/Resources/themes/MacOSX/Makefile ])
AC_CONFIG_FILES([ macosx/root/Applications/qRezix.app/Contents/Resources/themes/NoiaWarmKDE/Makefile ])
AC_CONFIG_FILES([ macosx/root/Applications/qRezix.app/Contents/Resources/themes/classic/Makefile ])
AC_CONFIG_FILES([ macosx/root/Applications/qRezix.app/Contents/Resources/themes/krystal/Makefile ])
AC_CONFIG_FILES([ macosx/root/Applications/qRezix.app/Contents/Resources/themes/ms/Makefile ])
AC_CONFIG_FILES([ macosx/root/Applications/qRezix.app/Contents/Resources/translations/Makefile ])
AC_CONFIG_FILES([ po/Makefile ])
AC_CONFIG_FILES([ qrezix/Makefile ])
AC_CONFIG_FILES([ qrezix/qRezix.app/Contents/Resources/themes/Makefile ])
AC_CONFIG_FILES([ qrezix/qRezix.app/Contents/Resources/themes/Kids/Makefile ])
AC_CONFIG_FILES([ qrezix/qRezix.app/Contents/Resources/themes/MacOSX/Makefile ])
AC_CONFIG_FILES([ qrezix/qRezix.app/Contents/Resources/themes/NoiaWarmKDE/Makefile ])
AC_CONFIG_FILES([ qrezix/qRezix.app/Contents/Resources/themes/classic/Makefile ])
AC_CONFIG_FILES([ qrezix/qRezix.app/Contents/Resources/themes/krystal/Makefile ])
AC_CONFIG_FILES([ qrezix/qRezix.app/Contents/Resources/themes/ms/Makefile ])
AC_CONFIG_FILES([ qrezix/qRezix.app/Contents/Resources/translations/Makefile ])
AC_CONFIG_FILES([ qrezix/translations/Makefile ])
AC_OUTPUT
if test "$all_tests" = "bad"; then
  if test ! "$cache_file" = "/dev/null"; then
    echo ""    
    echo "Please remove the file $cache_file after changing your setup"
    echo "so that configure will find the changes next time."
    echo ""
  fi
else
  echo ""
  echo "Good - your configure finished. Start make now"
  echo ""
fi
