dist_pkgdata_DATA=action.png\
ftp.png\
hotline.png\
http.png\
jone.png\
Makefile.am\
news.png\
orange.png\
os_0_large.png\
os_0.png\
os_1_large.png\
os_1.png\
os_2_large.png\
os_2.png\
os_3_large.png\
os_3.png\
os_4_large.png\
os_4.png\
os_5_large.png\
os_5.png\
rouje.png\
samba.png\
same_gateway.png
